@@ -1,6 +1,6 @@
 {
-  "count": 64,
-  "uniques": 19,
+  "count": 65,
+  "uniques": 20,
   "views": [
     {
       "timestamp": "2024-08-15T00:00:00Z",
@@ -40,6 +40,11 @@
     {
       "timestamp": "2024-08-27T00:00:00Z",
       "count": 6,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-08-28T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
