@@ -1,3 +1,12 @@
+2024-08-28T12:42:02Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10596888960 # 495
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-28
+* notice: last 14d: unq all: 20 65
+* notice: prev accum: outdated-unq outdated-all / unq all: 761 4261 / 780 4325
+* notice: next accum: outdated-unq outdated-all / unq all: 761 4261 / 781 4326
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-08-28]
+
 2024-08-27T12:40:29Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10578302652 # 493
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-27
